@@ -8,33 +8,33 @@
   </div>
 
   <div class="content">
-   <form action="view.php?useSessionFilter=true" method="post">
-    <p class="Options" style="padding: 5px"><label for="text"><strong>Your e-mail address: </strong></label><input type="text" name="email" id="email" value="{$developer->email|escape}"></p>
+   <form action="options.php" method="post">
+    <p class="Options" style="padding: 5px">
+     <label for="email"><strong>Your e-mail address: </strong></label><input type="text" name="email" id="email" value="{$developer->email|escape}">
+    </p>
     <div class="Options" style="padding: 5px">
-    <p style="margin: 0"><strong>Receive e-mails when</strong> new comments matching those criteria are posted:</p>
-    <table>
-     <tr>
-      <td style="vertical-align: top">
-       <strong>Type:</strong><br>
-       <input type="checkbox" name="MatchLike" id="MatchLike" {$likeChecked}><label for="MatchLike">Like</label><br>
-       <input type="checkbox" name="MatchDislike" id="MatchDislike" {$dislikeChecked}><label for="MatchDislike">Do not like</label><br>
-       <input type="checkbox" name="MatchBug" id="MatchBug" {$bugChecked}><label for="MatchBug">Bug</label><br>
-       <input type="checkbox" name="MatchFeature" id="MatchFeature" {$featureChecked}><label for="MatchFeature">Feature</label>
-      </td>
-      <td style="vertical-align: top">
-       <strong>Locale:</strong><br>
-
+     <p style="margin: 0"><strong>Receive e-mails when</strong> new comments matching those criteria are posted:</p>
+     <table>
+      <tr>
+       <td style="vertical-align: top">
+        <strong>Type:</strong><br>
+        <input type="checkbox" name="MatchLike" id="MatchLike" {$likeChecked}><label for="MatchLike">Like</label><br>
+        <input type="checkbox" name="MatchDislike" id="MatchDislike" {$dislikeChecked}><label for="MatchDislike">Do not like</label><br>
+        <input type="checkbox" name="MatchBug" id="MatchBug" {$bugChecked}><label for="MatchBug">Bug</label><br>
+        <input type="checkbox" name="MatchFeature" id="MatchFeature" {$featureChecked}><label for="MatchFeature">Feature</label>
+       </td>
+       <td style="vertical-align: top">
+        <strong>Locale:</strong><br>
 {section name=i loop=$locales}
 {assign var=locale value=`$locales[i]->locale`}
 {if matchLocale($developer->locales, $locale)}{assign var=checked value='checked="checked"'}{else}{assign var=checked value=''}{/if}
-       <input type="checkbox" name="MatchLocale_{$locale|escape}" id="MatchLocale_{$locale|escape}" {$checked}><label for="MatchLocale_{$locale|escape}">{$locale|escape}</label><br>
+        <input type="checkbox" name="MatchLocale_{$locale|escape}" id="MatchLocale_{$locale|escape}" {$checked}><label for="MatchLocale_{$locale|escape}">{$locale|escape}</label><br>
 {/section}
-
 {if matchLocale($developer->locales, "*")}{assign var=checked value='checked="checked"'}{else}{assign var=checked value=''}{/if}
-       <input type="checkbox" name="MatchOtherLocales" id="MatchOtherLocales" {$checked}><label for="MatchOtherLocales">Others</label>
-      </td>
-     </tr>
-    </table>
+        <input type="checkbox" name="MatchOtherLocales" id="MatchOtherLocales" {$checked}><label for="MatchOtherLocales">Others</label>
+       </td>
+      </tr>
+     </table>
     </div>
     <p style="text-align: center"><input type="submit" name="saveOptions" value="Ok"></p>
    </form>
